added moderator and admin integration tests, increased coverage
